# Uplog

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: uplog.toml
src/: buffer.rs  config.rs  error.rs  main.rs  models.rs
src/collectors/: logs.rs  metrics.rs
src/shipper/: http.rs  mod.rs
