[package]
name = "uplog"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["json"] }

sysinfo = "0.37"

notify = "8"

anyhow = "1"

serde_json = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

clap = { version = "4", features = ["derive"] }
futures = "0.3"