[package]
name = "uplog"
version = "0.1.2"
edition = "2021"
description = "Lightweight observability agent — tails logs, collects metrics, ships JSON over HTTP"
license = "MIT"
repository = "https://github.com/diptanshu1044/uplog"
readme = "README.md"
keywords = ["observability", "logging", "metrics", "agent"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sysinfo = "0.37"
clap = { version = "4", features = ["derive"] }
dirs = "5"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true